1. 节点历史相关完善、问题处理